fixes alignment issues in arabic tours

--- a/assets/reveal.js/css/reveal.css
+++ b/assets/reveal.js/css/reveal.css
@@ -1251,7 +1251,8 @@ body {
 .reveal.rtl .slides p,
 .reveal.rtl .slides small {
   direction: rtl;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  text-align: right; }
 
 .reveal.rtl pre,
 .reveal.rtl code {
